--- a/editor.html
+++ b/editor.html
@@ -204,6 +204,36 @@
                         <option value="em">em</option>
                         <option value="px">px</option>
                     </select>
+                    fontWeight: <select name="fontWeight" class="form-select" style="width: 6em;">
+                        <option value=""></option>
+                        <option value="bold">bold</option>
+                        <option value="bolder">bolder</option>
+                        <option value="lighter">lighter</option>
+                        <option value="100">100</option>
+                        <option value="200">200</option>
+                        <option value="300">300</option>
+                        <option value="400">400</option>
+                        <option value="500">500</option>
+                        <option value="600">600</option>
+                        <option value="700">700</option>
+                        <option value="800">800</option>
+                        <option value="900">900</option>
+                        
+                    </select>
+                    fontStyle: <select name="fontStyle" class="form-select" style="width: 6em;">
+                        <option value=""></option>
+                        <option value="italic">italic</option>
+                        <option value="oblique">oblique</option>
+                    </select>
+                    fontFamily: <select name="fontFamily" class="form-select" style="width: 6em;">
+                        <option value=""></option>
+                        <option value="serif">serif</option>
+                        <option value="sans-serif">sans-serif</option>
+                        <option value="monospace">monospace</option>
+                        <option value="Arial">Arial</option>
+                        <option value="Helvetica">Helvetica</option>
+                    </select>
+                   
                     textPaddingNumber:<input type="range" name="textPaddingNumber" value="0" step="0.1" min="0" max="100">
                     textPaddingUnit: <select name="textPaddingUnit" class="form-select" style="width: 6em;">
                         <option value="px">px</option>
