--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- jquery 관련 -->
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script> -->
 
-    <!-- 부트스트랩 5.3.x -->
+    <!-- 부트스트랩 5.3.left -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 
@@ -62,23 +62,23 @@
 
             const wcl1 = globalThis.wcl1 = new Layer(200,100,'#0000ff');
             wcc1.add(wcl1)
-            wcl1.x = 50;
-            wcl1.y = 100;
+            wcl1.left = 50;
+            wcl1.top = 100;
             wcl1.alpha = 0.2
             
             
             const wcl2 = globalThis.wcl2 = new Layer(100,100);
             wcc1.add(wcl2)
             wcl2.fill('#ff000099')
-            wcl2.x = 300;
-            wcl2.y = 20
+            wcl2.left = 300;
+            wcl2.top = 20
             wcl2.ctxCommand('에러나야하는 코멘트',1,2,3,4,5)
 
             const wcl3 = globalThis.wcl3 = new Layer(300,300);
             wcc1.add(wcl3)
             // wcl3.id = 'wcl3';
-            wcl3.x = 30;
-            wcl3.y = 30
+            wcl3.left = 30;
+            wcl3.top = 30
             wcl3.alpha = 0.5
             wcl3.imageWidth = 30;
             wcl3.imageHeight = 30
@@ -99,8 +99,8 @@
             const wcl4 = globalThis.wcl4 = new Layer(100,100);
             // wcc1.add(wcl4)
             wcl4.fill('#ff000099')
-            wcl4.x = 130;
-            wcl4.y = 10
+            wcl4.left = 130;
+            wcl4.top = 10
 
             editor.document.add(wcl4);
         })
