--- a/editor.html
+++ b/editor.html
@@ -334,7 +334,7 @@
             <div class="card my-1">
                 <div class="card-header">LAYER VALUE</div>
                 <div class="card-body">
-                    <div class="d-flex gap-1">
+                    <div class="d-flex flex-wrap gap-1">
                         <form action="" onsubmit="editor?.document?.layer?.resize(this.width.value,this.height.value);editor?.document?.layer?.flush(); return false">
                             <div class="input-group" style="width:300px;">
                                 <input class="form-control" type="number" name="width" placeholder="width"
