--- a/brush.html
+++ b/brush.html
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-text" >roundness(원형율)</span>
-                                    <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.1" min="0" max="1"
+                                    <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1"
                                         onfocus="if(b1){ this.value = b1[this.name];}" 
                                         oninput="b1[this.name] = this.value;"
                                         >
@@ -164,6 +164,13 @@
                                 <div class="input-group">
                                     <span class="input-group-text" >angle(각도)</span>
                                     <input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1"
+                                        onfocus="if(b1){ this.value = b1[this.name];}" 
+                                        oninput="b1[this.name] = this.value;"
+                                        >
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-text" >hardness(경도)</span>
+                                    <input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1"
                                         onfocus="if(b1){ this.value = b1[this.name];}" 
                                         oninput="b1[this.name] = this.value;"
                                         >
