--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     <div class="container">
         <a href="editor.html">editor.html</a>
         <a href="brush.html">brush.html</a>
+        <a href="./test/draw/test.PathShape.html">test.PathShape.html</a>
+        
     </div>
     <div class="container">
         <h2>bundle</h2>
