--- a/brush.html
+++ b/brush.html
@@ -85,6 +85,9 @@
             b1.angle = -0.25;
             b1.hardness = 1;
             b1.flush();
+
+            const c1 = globalThis.c1 =  document.querySelector('#c1');
+            b1.drawOnLine(c1.ctx,0,0,300,300)
         })
     </script>
     
@@ -146,50 +149,80 @@
                         </div>
                     </form>
                 </div>
-                <div class="card my-1">
-                    <div class="card-header">LAYER VALUE</div>
-                    <div class="card-body">
-                        <form action="" onsubmit="b1.flush(); return false" >
-                            <div class="d-flex flex-wrap gap-1 property-wrap">
-                                <div class="input-group">
-                                    <span class="input-group-text" >size</span>
-                                    <input class="form-control" type="number" name="size" placeholder="size"
-                                        onfocus="if(b1){ this.value = b1[this.name];}" 
-                                        oninput="b1[this.name] = this.value;"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >roundness(원형율)</span>
-                                    <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1"
-                                        onfocus="if(b1){ this.value = b1[this.name];}" 
-                                        oninput="b1[this.name] = this.value;"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >angle(각도)</span>
-                                    <input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1"
-                                        onfocus="if(b1){ this.value = b1[this.name];}" 
-                                        oninput="b1[this.name] = this.value;"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >hardness(경도)</span>
-                                    <input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1"
-                                        onfocus="if(b1){ this.value = b1[this.name];}" 
-                                        oninput="b1[this.name] = this.value;"
-                                        >
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div> 
             </div>
+            <div class="card my-1">
+                <div class="card-header">LAYER VALUE</div>
+                <div class="card-body">
+                    <form action="" oninput="c1.clear();b1.drawOnLine(c1.ctx,0,0,300,300); return false" >
+                        <div class="d-flex flex-wrap gap-1 property-wrap">
+                            <div class="input-group">
+                                <span class="input-group-text" >size</span>
+                                <input class="form-control" type="number" name="size" placeholder="size"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >roundness(원형율)</span>
+                                <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >angle(각도)</span>
+                                <input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >hardness(경도)</span>
+                                <input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >opacity(불투명도)</span>
+                                <input class="form-control" type="number" name="opacity" placeholder="opacity" step="0.05" min="0" max="1"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >spacing(간격)</span>
+                                <input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="1"
+                                    onfocus="if(b1){ this.value = b1[this.name];}" 
+                                    oninput="b1[this.name] = this.value;"
+                                    >
+                            </div>
+                            
+                        </div>
+                    </form>
+                </div>
+            </div> 
             <hr>
         </div>
-        <div class="flex-fill">
-            <div class="container">
-                <canvas class="b1" is="wc-brush" width="100" height="100" ></canvas>
+        <div class="container my-3" style="background-color: #fee;">
+            <div>
+                <canvas class="b1 d-block mx-auto" is="wc-brush" width="100" height="100" ></canvas>
             </div>
+        </div>
+        <div class="container my-3" >
+            <div class="card my-1">
+                <div class="card-header">drawOnLine</div>
+                <div class="card-body" style="background-color: #eef;">
+                    <div>
+                        <button type="button" class="btn btn-primary" onclick="c1.clear();b1.drawOnLine(c1.ctx,0,0,300,300)">redraw</button>
+                    </div>
+                    <hr>
+                    <div>
+                        <canvas  id="c1" class=" d-block mx-auto" is="wc-canvas" width="300" height="300"></canvas>
+                    </div>
+                </div>
+            </div> 
+  
         </div>
         <div class="container">
             <hr>
