--- a/brush.html
+++ b/brush.html
@@ -151,50 +151,50 @@
                 </div>
             </div>
             <div class="card my-1">
-                <div class="card-header">LAYER VALUE</div>
+                <div class="card-header">BRUSH PROPERTY</div>
                 <div class="card-body">
-                    <form action="" oninput="c1.clear();b1.drawOnLine(c1.ctx,0,0,300,300); return false" >
+                    <form action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush(); c1.clear();b1.drawOnLine(c1.ctx,0,0,300,300); return false" >
                         <div class="d-flex flex-wrap gap-1 property-wrap">
                             <div class="input-group">
                                 <span class="input-group-text" >size</span>
                                 <input class="form-control" type="number" name="size" placeholder="size"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
+                                    value="77"
                                     >
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text" >roundness(원형율)</span>
                                 <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}" 
+                                    value="1"
                                     >
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text" >angle(각도)</span>
                                 <input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}" 
+                                    value="0"
                                     >
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text" >hardness(경도)</span>
                                 <input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}" 
+                                    value="1"
                                     >
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text" >opacity(불투명도)</span>
                                 <input class="form-control" type="number" name="opacity" placeholder="opacity" step="0.05" min="0" max="1"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}" 
+                                    value="1"
                                     >
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text" >spacing(간격)</span>
-                                <input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="1"
-                                    onfocus="if(b1){ this.value = b1[this.name];}" 
-                                    oninput="b1[this.name] = this.value;"
+                                <input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="2"
+                                    onfocus="if(b1){ this.value = b1.brushConfig[this.name];}" 
+                                    value="2"
                                     >
                             </div>
                             
