--- a/brush.html
+++ b/brush.html
@@ -101,7 +101,7 @@
     
 </head>
 <body>
-    <div class="w-100 h-100 d-flex flex-column" style="top:0;left:0;bottom:auto;margin:0; touch-action: none;">
+    <div class="w-100 h-100 d-flex flex-column" >
         <div class="container">
             <h2>Brushset</h2>
             <div class="card my-1">
@@ -112,7 +112,7 @@
                         <div class="d-flex flex-wrap gap-1 property-wrap">
                             <div class="input-group">
                                 <span class="input-group-text" >전경색</span>
-                                <input type="color" class="form-control form-control-color"  name="foreColor" value="#f4f9eb">
+                                <input type="color" class="form-control form-control-color"  name="foreColor" value="#f40000">
                             </div>
                         </div>
                     </form>
