wc/lib/CssFontUtil.js

--- a/editor.html
+++ b/editor.html
@@ -274,7 +274,7 @@
                             <div class="input-group">
                                 <span class="input-group-text" >fontWeight</span>
                                 <select name="fontWeight" class="form-select" >
-                                    <option value="">normal</option>
+                                    <option value="normal">normal</option>
                                     <option value="bold">bold</option>
                                     <option value="bolder">bolder</option>
                                     <option value="lighter">lighter</option>
