--- a/editor.html
+++ b/editor.html
@@ -402,6 +402,14 @@
                                     value="0.25"
                                     >
                             </div>
+                            <div class="input-group">
+                                <span class="input-group-text" >solidColor(단색)</span>
+                                <select class="form-select " name="solidColor" id="" onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"  >
+                                    <option selected value="">NO</option>
+                                    <option value="1">YES</option>
+                                    
+                                </select>
+                            </div>
                             
                         </div>
                     </form>
