*Config.assign -> assignTo

--- a/editor.html
+++ b/editor.html
@@ -241,11 +241,15 @@
                                 </select>
                             </div> -->
                         </div>
-                        <hr class="my-1">
                     </form>
                     
+                    
+                </div>
+            </div>
+            <div class="card my-1">
+                <div class="card-header">TEXT</div>
+                <div class="card-body">
                     <form action="" onsubmit="return false;" oninput="editor.setTextConfig(Wc.HtmlUtil.formToObject(this)); return false" onchange="this.oninput(event); return false">
-                        <h3 class="fs-5">TEXT</h3>
                         <div class="d-flex flex-wrap gap-1 property-wrap">
                             <div class="input-group">
                                 <span class="input-group-text" >글자색</span>
