--- a/editor.html
+++ b/editor.html
@@ -449,7 +449,7 @@
                 </div>
             </div> 
             <div class="card my-1">
-                <div class="card-header">LAYER VALUE</div>
+                <div class="card-header">LAYER PROPERTY</div>
                 <div class="card-body">
                     <div class="d-flex flex-wrap gap-1">
                         <form action="" onsubmit="editor?.document?.layer?.resize(this.width.value,this.height.value);editor?.document?.layer?.flush(); return false">
@@ -498,6 +498,39 @@
                                     >
                             </div>
                         </form>
+                    </div>
+                    <hr>
+                    <form action="" onsubmit="return false;" oninput="if(editor.document.layer){editor.document.layer.flush()}">
+                        <h3 class="fs-5">TEXT</h3>
+                        <textarea name="" rows="3" class="form-control" id="" oninput="if(editor.document.layer.setText !==undefined){editor.document.layer.setText(this.value);}" onfocus="if(editor.document.layer.text){ this.value=editor.document.layer.text}"></textarea>
+                    </form>
+                </div>
+            </div>                    
+            <div class="card my-1">
+                <div class="card-header">DOCUMENT PROPERTY</div>
+                <div class="card-body">
+                    <div class="d-flex flex-wrap gap-1">
+                        <form action="" onsubmit="if(editor?.document) { editor.document.zoom=parseFloat(this.zoom.value); editor.document.flush();} return false" oninput="return this.onsubmit(event)">
+                            <div class="input-group" style="width:300px;">
+                                <span class="input-group-text">ZOOM</span>
+                                <input class="form-control" type="number" name="zoom" placeholder="zoom"
+                                    step="0.05" min="0" max="3"
+                                    onfocus="if(editor?.document){ this.form.zoom.value = editor?.document.zoom;}" 
+                                    >
+                                <button class="btn btn-primary">변경</button>
+                            </div>
+                        </form>
+                        <form action="" onsubmit="if(editor?.document) { editor.document.angle=parseFloat(this.angle.value); editor.document.flush();} return false" oninput="return this.onsubmit(event)">
+                            <div class="input-group" style="width:300px;">
+                                <span class="input-group-text">ANGLE</span>
+                                <input class="form-control" type="number" name="angle" placeholder="angle"
+                                    step="0.05" min="-1" max="1"
+                                    onfocus="if(editor?.document){ this.form.angle.value = editor?.document.angle;}" 
+                                    >
+                                <button class="btn btn-primary">변경</button>
+                            </div>
+                        </form>
+
                     </div>
                     <hr>
                     <form action="" onsubmit="return false;" oninput="if(editor.document.layer){editor.document.layer.flush()}">
