--- a/editor.html
+++ b/editor.html
@@ -99,6 +99,8 @@
             editor.addEventListener();
 
 
+            editor.document.layer.left = 30
+            editor.document.layer.zoom = 1.5
 
             const wcl4 = globalThis.wcl4 = new Layer(100,100);
             wcl4.fill('#ff000066')
