frame 개발 대충 완료.

--- a/frame.html
+++ b/frame.html
@@ -44,13 +44,13 @@
 <body>
   <!-- <h1>TEST FRAME</h1>
   <hr> -->
-  <div class="wc-editor d-flex flex-column position-absolute " style="top:0;left:0;right:0;bottom:0;max-height:100svh" >
+  <div class="wc-editor d-flex flex-column position-absolute " style="top:0;left:0;right:0;bottom:0;height: 100svh;" >
     <div class="wc-editor-header" style="flex:0 0 40px">header</div>
-    <div class="wc-editor-body" style="flex:1 0 auto; height: calc( 100svh - 40px - 40px);overflow: scroll;box-sizing: border-box;" >
-      <div style="width:2000px;height:300px;border:1px solid #f00;flex: 0 0 auto;;">1</div>
-      <!-- <div class="wc-frame" style="padding: 50svh 50svw; width: max-content; height: max-content;">
+    <div class="wc-editor-body" style="flex:1 1 auto;" >
+      <div class="wc-frame" style="overflow: scroll; height: 100%;">
+        <div style="width:2000px;height:300px;border:1px solid #f00;flex: 0 0 auto; margin:100vmax">1</div>
         
-      </div> -->
+      </div>
     </div>
     <div class="wc-editor-footer" style="flex:0 0 40px">footer</div>
   </div>
