--- a/editor.html
+++ b/editor.html
@@ -199,6 +199,13 @@
                     <canvas id="wc-document" class="wc-document" width="300" height="300" is="wc-document"></canvas>
                 </div>
             </div>
+            <div class="wc-app-etcs">
+                <div class="d-flex gap-1 p-1">
+                    <button type="button" class="btn btn-sm btn-primary" onclick="editor?.document.history.undo()">UNDO</button>
+                    <button type="button" class="btn btn-sm btn-primary" onclick="editor?.document.history.redo()">REDO</button>
+                    <button type="button" class="btn btn-sm btn-primary" onclick="editor?.document.history.save()">SAVE</button>
+                </div>
+            </div>
             <div class="wc-app-modal-btns">
                 <div>
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#modalMenuFile">File</button>
@@ -207,10 +214,7 @@
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#modalBrush">Brush</button>
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#modalLayer">Layer</button>
                     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#modalDocument">Document</button>
-                    
-                </div>
-
-                
+                </div>                
             </div>
             <div class="wc-app-preview-layers">
                 <div id="div-for-debug" class="preview-layers">
