Layers의 history 동작 계속

--- a/editor.html
+++ b/editor.html
@@ -192,7 +192,7 @@
                 <div><label role="button" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Rectangle" onclick="editor.tools.select('Rectangle')"><button type="button" class="btn btn-sm btn-outline-info pe-none">tool:Rectangle</button></label></div>
                 <div><label role="button" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Circle" onclick="editor.tools.select('Circle')"><button type="button" class="btn btn-sm btn-outline-info pe-none">tool:Circle</button></label></div>
                 <div><label role="button" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Text" onclick="editor.tools.select('Text')"><button type="button" class="btn btn-sm btn-outline-info pe-none">tool:Text</button></label></div>
-                <div><label role="button" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  onclick="editor.tool.apply()"><button type="button" class="btn btn-sm btn-outline-info pe-none" >tool:Text - apply</button></label></div>
+                <div><label role="button" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  onclick="editor.tool.commit()"><button type="button" class="btn btn-sm btn-outline-info pe-none" >tool:Text - commit</button></label></div>
             </div>
             <div id="wc-editor" class="wc-editor wc-app-body debug-box">
                 <div class="wc-frame">
