--- a/editor.html
+++ b/editor.html
@@ -151,7 +151,7 @@
             editor.document.add(wcl4);
 
             editor.document.layers.select(0);
-            editor.document.readyDocument();
+            editor.document.ready();
             editor.document.history.save('Document.New');
 
             // divForDebug.append(editor.document.drawLayer)
